@@ -1,3 +1,6 @@
+* Add get method on ir.lang
+* Convert format, currency and strftime of ir.lang into instance methods
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Add support for Python 3.6
